Update navbar to fix vertical alignment for mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,13 +35,29 @@ body {
 /* modify bootstraps background color */
 .navbar-custom {
   background-color: var(--paint-steel);
-  height: 10vh;
+  color: var(--paint-off-white);
+  font-size: 24px;
+  padding: 1em;
 }
 
-/* modify bootstraps navbar text color  */
-.navbar-custom .navbar-text {
-  color: #f7f5ec;
+.navbar-brand {
+  background-color: var(--paint-off-white);
+  border: none;
+  border-radius: 10%;
+  font-size: 24px;
+  padding: 0.5em;
 }
+
+.navbar-custom .social-networks {
+  color: var(--paint-off-white);
+  font-size: 18px;
+}
+
+.navbar-menu a:hover {
+  text-decoration: 2px underline #f7f5ec;
+}
+
+/*------- HEADER ENDS-----------*/
 
 /* review need for empty container & sizing after nav bar has been created */
 .header-container {
